Version 6.18.12
TODO
    - #157 undo #148 getmails shell quoting

Version 6.18.11
1 January 2023
    - #149 (h3xx/fix-shell-quote) added ability to process token creation on a headless server (device without a browser)
    - #146 (ykasap/appperms) Fix shell quoting issue
    - #145 add "offline_access" permission in Example 13 docs/getmailrc-examples (Exchange Online)
    - #141 add documentation for --searchset/-s
    - #142 dont consider hidden files as config file (if no --rcfile)
    - #138 (ChrisTG742) partial fix for #135 (getmail-gmail-xoauth-tokens errors are confusing)
      HTTP exception handling for GET requests
    - #134 (ChrisTG742) fix #129 (MDA_external: screen output of called script silently dropped)
      new option "pipe_stdout" to the [destination] settings block
    - #148 getmails shell quoting

Version 6.18.10
20 September 2022
    - readme: mention "app password" for gmail
    - fix #122: Inappropriate error message for external password command
    - fix #125: exclude files ending in .json if no --rcfile
    - pull #131: Update getmailrc-examples (ChrisTG742/getmail6)
    - fix #132: forward to corrupted_message on encoding problems

Version 6.18.9
11 May 2022
    - pull #115: Add support for local webserver to receive oauth2 redirect
    - #119: NameError: name 'CertificateError' is not defined (ca_certs option)

Version 6.18.8
09 May 2022
    - #118: redirect_uri requirements in Microsoft's OAuth 2.0

Version 6.18.7
08 May 2022
    - #116: Update to avoid use of depreciated Google OAuth2 flow
    - #114: Fails with "Killed" when retrieving large emails
            use timeout for socket also as wait timeout for child
    - #112: getmail keeps downloading the whole mailbox
            new to_oldmail_on_each_mail option.
    - #111: DeprecationWarnings from ssl

Version 6.18.6
08 January 2022
    - #104: add config parameter to MDA_lmtp to override recipient address (WIP)
    - #103: Fix random token generation